backends/rust/src/snapshots/ridl_backend_rust__tests__appendix_b_c_header_snapshot.snap
---
source: backends/rust/src/tests.rs
expression: c_header
---
/* Generated from RIDL package veh.common (IR ridl.ir.v2).
 *
 * Extern-C ABI face for the typl language layer (typl reference Appendix D,
 * ADR-0007 decision 13). This file is generated; do not edit.
 *
 * String-backed constants and types are omitted here rather than mapped to a
 * value type: C has no owning string value. The generated Rust exposes them as
 * `&str` constants (the documented asymmetry).
 *
 * Identifiers carrying another package's prefix (for example
 * `ridl_std_timestamp`) are declared in that package's own generated header;
 * include it alongside this one.
 */
#ifndef VEH_COMMON_H
#define VEH_COMMON_H

#include <stdbool.h>
#include <stdint.h>

typedef double veh_common_speed;
typedef double veh_common_temperature;
typedef double veh_common_rpm;
typedef double veh_common_ratio;
typedef int64_t veh_common_counter;
typedef double veh_common_gain;

enum veh_common_gear_position {
    VEH_COMMON_GEAR_POSITION_PARK = 0,
    VEH_COMMON_GEAR_POSITION_DRIVE = 1,
    VEH_COMMON_GEAR_POSITION_REVERSE = 2,
    VEH_COMMON_GEAR_POSITION_NEUTRAL = 3
};

enum veh_common_warning {
    VEH_COMMON_WARNING_LOW_FUEL = 0,
    VEH_COMMON_WARNING_CHECK_ENGINE = 1,
    VEH_COMMON_WARNING_DOOR_OPEN = 2,
    VEH_COMMON_WARNING_SEATBELT = 3
};

typedef int64_t veh_common_warning_flags;
#define VEH_COMMON_WARNING_FLAGS_LOW_FUEL (1LL << 0)
#define VEH_COMMON_WARNING_FLAGS_CHECK_ENGINE (1LL << 1)
#define VEH_COMMON_WARNING_FLAGS_DOOR_OPEN (1LL << 2)
#define VEH_COMMON_WARNING_FLAGS_SEATBELT (1LL << 3)

typedef struct {
    veh_common_speed limit;
    veh_common_speed actual;
} veh_common_speed_limit_payload;

typedef struct {
    veh_common_speed value;
    ridl_std_timestamp timestamp;
} veh_common_sensor_reading;

/* not representable in C ABI:
 *   struct DriverProfile — variable layout (optional, string, or collection field)
 *   struct SensorBounds — variable layout (optional, string, or collection field)
 *   union SensorResult — tagged union
 *   struct SensorFault — variable layout (optional, string, or collection field)
 *   struct RawWheelFrame — variable layout (optional, string, or collection field)
 */

#endif /* VEH_COMMON_H */
