backends/rust/src/snapshots/ridl_backend_rust__tests__bounded_map.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
#[repr(transparent)]
pub struct Speed(pub f64);
impl Default for Speed {
    fn default() -> Self {
        Speed(0.0)
    }
}
#[repr(transparent)]
pub struct Counter(pub i64);
impl Default for Counter {
    fn default() -> Self {
        Counter(0)
    }
}
pub struct Table {
    pub meta: Vec<(Counter, Speed)>,
}
impl Default for Table {
    fn default() -> Self {
        Table { meta: Vec::new() }
    }
}
