backends/rust/src/snapshots/ridl_backend_rust__tests__constants_all_forms.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
#[repr(transparent)]
pub struct Speed(pub f64);
impl Default for Speed {
    fn default() -> Self {
        Speed(0.0)
    }
}
pub const MAX_SPEED: Speed = Speed(250.0);
pub const MAX_GEAR: i64 = 6;
#[repr(transparent)]
pub struct Greeting(pub String);
impl Default for Greeting {
    fn default() -> Self {
        Greeting(String::new())
    }
}
pub const BANNER: &str = "hello";
pub const VIN_PATTERN: &str = "^[A-HJ-NPR-Z0-9]{17}$";
