backends/rust/src/snapshots/ridl_backend_rust__tests__deprecated_and_internal_visibility.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
#[deprecated(note = "use Velocity")]
#[repr(transparent)]
pub struct Speed(pub f64);
impl Default for Speed {
    fn default() -> Self {
        Speed(0.0)
    }
}
#[deprecated]
#[repr(transparent)]
pub struct OldFlag(pub bool);
impl Default for OldFlag {
    fn default() -> Self {
        OldFlag(false)
    }
}
#[repr(transparent)]
pub(crate) struct RawTicks(pub(crate) i64);
impl Default for RawTicks {
    fn default() -> Self {
        RawTicks(0)
    }
}
