backends/rust/src/snapshots/ridl_backend_rust__tests__enum_with_discriminants.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
#[repr(i64)]
pub enum GearPosition {
    PARK = 0,
    DRIVE = 1,
    REVERSE = 2,
    NEUTRAL = 3,
}
impl Default for GearPosition {
    fn default() -> Self {
        GearPosition::PARK
    }
}
