backends/rust/src/snapshots/ridl_backend_rust__tests__enumset_standalone_form.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
#[repr(transparent)]
pub struct WarningFlags(pub i64);
impl WarningFlags {
    pub const LOW_FUEL: WarningFlags = WarningFlags(1 << 0);
    pub const CHECK_ENGINE: WarningFlags = WarningFlags(1 << 1);
    pub const DOOR_OPEN: WarningFlags = WarningFlags(1 << 2);
    pub const SEATBELT: WarningFlags = WarningFlags(1 << 3);
}
impl Default for WarningFlags {
    fn default() -> Self {
        WarningFlags(0)
    }
}
